// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridRows renders 0 1`] = `
Array [
  .c0 {
  grid-rows: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRows renders function 1`] = `
Array [
  .c0 {
  grid-rows: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRows renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-rows: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRows renders negative number 1`] = `
Array [
  .c0 {
  grid-rows: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRows renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  grid-rows: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-rows: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-rows: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-rows: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-rows: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRows renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-rows: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-rows: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-rows: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-rows: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-rows: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-rows: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-rows: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRows renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  grid-rows: July;
}

@media May {
  .c0 {
    grid-rows: August;
  }
}

@media April {
  .c0 {
    grid-rows: September;
  }
}

@media January {
  .c0 {
    grid-rows: November;
  }
}

@media April {
  .c0 {
    grid-rows: August;
  }
}

@media June {
  .c0 {
    grid-rows: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: July;
}

@media May {
  .c0 {
    grid-rows: August;
  }
}

@media April {
  .c0 {
    grid-rows: September;
  }
}

@media January {
  .c0 {
    grid-rows: November;
  }
}

@media April {
  .c0 {
    grid-rows: August;
  }
}

@media June {
  .c0 {
    grid-rows: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-rows: November;
  }
}

@media April {
  .c0 {
    grid-rows: January;
  }
}

@media January {
  .c0 {
    grid-rows: December;
  }
}

@media April {
  .c0 {
    grid-rows: April;
  }
}

@media June {
  .c0 {
    grid-rows: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-rows: November;
  }
}

@media April {
  .c0 {
    grid-rows: January;
  }
}

@media January {
  .c0 {
    grid-rows: December;
  }
}

@media April {
  .c0 {
    grid-rows: April;
  }
}

@media June {
  .c0 {
    grid-rows: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRows renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    grid-rows: July;
  }
}

@media April {
  .c0 {
    grid-rows: August;
  }
}

@media January {
  .c0 {
    grid-rows: September;
  }
}

@media April {
  .c0 {
    grid-rows: November;
  }
}

@media June {
  .c0 {
    grid-rows: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-rows: July;
  }
}

@media April {
  .c0 {
    grid-rows: August;
  }
}

@media January {
  .c0 {
    grid-rows: September;
  }
}

@media April {
  .c0 {
    grid-rows: November;
  }
}

@media June {
  .c0 {
    grid-rows: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-rows: January;
  }
}

@media April {
  .c0 {
    grid-rows: December;
  }
}

@media January {
  .c0 {
    grid-rows: April;
  }
}

@media April {
  .c0 {
    grid-rows: May;
  }
}

@media June {
  .c0 {
    grid-rows: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-rows: January;
  }
}

@media April {
  .c0 {
    grid-rows: December;
  }
}

@media January {
  .c0 {
    grid-rows: April;
  }
}

@media April {
  .c0 {
    grid-rows: May;
  }
}

@media June {
  .c0 {
    grid-rows: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRows renders postitive number 1`] = `
Array [
  .c0 {
  grid-rows: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRows renders string 1`] = `
Array [
  .c0 {
  grid-rows: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRows renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`gridRows renders valid theme path 1`] = `
Array [
  .c0 {
  grid-rows: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-rows: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
